--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shri Malatesh English Medium Primary And High school Gourapur - Home</title>
+    <title>Shri Malatesh English Medium Primary And High School Gourapur - Home</title>
     <link rel="stylesheet" href="css/style.css">
     <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
 
