--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News & Events - Shri Malatesh English Medium Primary And High school Gourapur</title>
+    <title>News & Events - Shri Malatesh English Medium Primary And High School Gourapur</title>
     <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
     <link rel="shortcut icon" href="./images/logo.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
@@ -15,7 +15,7 @@
             <div class="nav-container">
                 <div class="logo">
                     <img src="images/logo.jpeg" alt="School Logo" class="logo-image">
-                    <span class="logo-text">Shri Malatesh English Medium Primary And High school Gourapur</span>
+                    <span class="logo-text">Shri Malatesh English Medium Primary And High School Gourapur</span>
                 </div>
                 <div class="nav-toggle" id="mobile-menu">
                     <span class="bar"></span>
@@ -45,7 +45,7 @@
                         <a href="news.html" class="nav-link active">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a href="downloads.html" class="nav-link">Documents</a>
+                        <a href="downloads.html" class="nav-link">Mandatory disclosure</a>
                     </li>
                     <li class="nav-item">
                         <a href="contact.html" class="nav-link">Contact</a>
