--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="nav-container">
                 <div class="logo">
                     <img src="images/logo.jpeg" alt="School Logo" class="logo-image">
-                    <span class="logo-text">Shri Malatesh English Medium Primary And High school Gourapur</span>
+                    <span class="logo-text">Shri Malatesh English Medium Primary And High School Gourapur</span>
                 </div>
                 <div class="nav-toggle" id="mobile-menu">
                     <span class="bar"></span>
@@ -67,7 +67,7 @@
             <div class="container">
                 <div class="hero-content">
                     <div class="hero-text">
-                        <h1 class="fade-in">Welcome to Shri Malatesh English Medium Primary And High school Gourapur</h1>
+                        <h1 class="fade-in">Welcome to Shri Malatesh English Medium Primary And High School Gourapur</h1>
                         <p class="fade-in-delay">Excellence in Education Since Our Foundation</p>
                         <p class="school-location fade-in-delay">Gourapur, TQ DI: Haveri 581110</p>
                         <div class="hero-buttons fade-in-delay">
@@ -146,7 +146,7 @@
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <h3>Address</h3>
-                            <p>Shri Malatesh English Medium Primary And High school Gourapur<br>
+                            <p>Shri Malatesh English Medium Primary And High School Gourapur<br>
                                  , TQ DI: Haveri 581110</p>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Shri Malatesh English Medium Primary And High school Gourapur</h3>
+                    <h3>Shri Malatesh English Medium Primary And High School Gourapur</h3>
                     <p>Committed to excellence in education and character development.</p>
                 </div>
                 <div class="footer-section">
