--- a/downloads.html
+++ b/downloads.html
@@ -259,7 +259,7 @@
                                     <i class="fas fa-file-pdf"></i>
                                 </div>
                                 <div class="download-info">
-                                    <h3>RECOGNITION LETTER</h3>
+                                    <h3>Recognition Letter</h3>
                                     <p>Complete RECOGNITION LETTER</p>
                                     <span class="file-size">PDF • 900 KB</span>
                                 </div>
