--- a/news.html
+++ b/news.html
@@ -92,7 +92,7 @@
                                 <div class="download-info">
                                     <h3>Academic Calender</h3>
                                     <p>Complete Academic Calender</p>
-                                    <span class="file-size">XLSX • 14kb</span>
+                                    <span class="file-size">PDF • 14kb</span>
                                 </div>
                                 <div class="download-action">
                                     <a href="https://drive.google.com/file/d/1USIZuPMjNpSFeIzpyjJNjaMGxLL_GQTE/view?usp=sharing"><button class="download-btn">
