--- a/news.html
+++ b/news.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
+    <style>
+    a{
+        text-decoration: none;
+    }
+</style>
 <body>
     <header>
         <nav class="navbar">
