--- a/downloads.html
+++ b/downloads.html
@@ -260,11 +260,11 @@
                                 </div>
                                 <div class="download-info">
                                     <h3>Recognition Letter</h3>
-                                    <p>Complete RECOGNITION LETTER</p>
+                                    <p>Complete Recognition Letter</p>
                                     <span class="file-size">PDF • 900 KB</span>
                                 </div>
                                 <div class="download-action">
-                                    <a href="https://drive.google.com/file/d/19-sByRAdGEYRVF6LovIdLghyMsksXyeV/view?usp=sharing"><button class="download-btn">
+                                    <a href="https://drive.google.com/file/d/1cHyB1WImp5Jz02D8lIxbOUGkjAys3ozf/view?usp=sharing"><button class="download-btn">
                                         <i class="fas fa-download"></i>
                                         Download
                                     </button></a>
@@ -295,12 +295,12 @@
                                     <i class="fas fa-file-pdf"></i>
                                 </div>
                                 <div class="download-info">
-                                    <h3>Society Registration certificate</h3>
-                                    <p>Complete Society Registration certificate</p>
+                                    <h3>Society Registration Certificate</h3>
+                                    <p>Complete Society Registration Certificate</p>
                                     <span class="file-size">PDF • 1.6 MB</span>
                                 </div>
                                 <div class="download-action">
-                                    <a href="https://drive.google.com/file/d/1kE-ry27z5S25wHb4LQ8w6C0Ve0i_E99m/view?usp=sharing"><button class="download-btn">
+                                    <a href="https://drive.google.com/file/d/1x_3LKO-d41nGVYB0g-uynZOyNccEK1D9/view?usp=sharing"><button class="download-btn">
                                         <i class="fas fa-download"></i>
                                         Download
                                     </button></a>
