--- a/downloads.html
+++ b/downloads.html
@@ -152,6 +152,24 @@
                                     <i class="fas fa-file-pdf"></i>
                                 </div>
                                 <div class="download-info">
+                                    <h3> MANDATORY PUBLIC DISCLOSURE</h3>
+                                    <p>Complete  MANDATORY PUBLIC DISCLOSUREp>
+                                    <span class="file-size">XLSX • 14kb</span>
+                                </div>
+                                <div class="download-action">
+                                    <a href="https://drive.google.com/file/d/1cTntMSSmSvJ4FWHRjWkT6-K_G-1_CXRr/view?usp=sharing"><button class="download-btn">
+                                        <i class="fas fa-download"></i>
+                                        Download
+                                    </button></a>
+                                </div>
+                            </div>
+                            
+
+                        <div class="download-card">
+                                <div class="download-icon">
+                                    <i class="fas fa-file-pdf"></i>
+                                </div>
+                                <div class="download-info">
                                     <h3>Academic Calender</h3>
                                     <p>Complete Academic Calender</p>
                                     <span class="file-size">XLSX • 14kb</span>
